fix tooltip z-index

--- a/app/components/Avatar/Avatar.scss
+++ b/app/components/Avatar/Avatar.scss
@@ -67,6 +67,7 @@
   opacity: 1;
   pointer-events: auto;
   transform: translateY(0);
+  z-index: 1;
 }
 
 .userEmail {
